--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -87,7 +87,7 @@
 				align-items: center;
 				img.preview {
 					max-width: 700px;
-					max-height: 510px;
+					max-height: calc(90vh - 200px);
 				}
 				&.ocr {
 					padding: 0;
