--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -399,6 +399,7 @@ md-event-calendar {
         margin: 15px;
         padding: 10px;
         margin-left: 25px;
+        padding: 15px;
         clear: both;
         overflow: hidden;
         display: flex;
