--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -185,7 +185,7 @@
             <div ng-if="isBroker">
                 <md-step md-label="Validation Reports">
                     <md-step-body layout="column" flex>
-                        <div style="min-height: 800px; height: 800px;">
+                        <div class="validationTab">
                             <div class="validation-report-count">
                                 <div class="stat accepted"> {{vm.validationAcceptedCount}} </div>
                                 <div class="stat rejected"> {{vm.validationRejectedCount}} </div>
