--- a/src/app/components/main/blockchain/blockchain.responsive.scss
+++ b/src/app/components/main/blockchain/blockchain.responsive.scss
@@ -27,7 +27,9 @@
 			display: flex;
 			align-items: center;
 			padding-left: 15px;
-			position: relative;
+			position: absolute;
+            bottom: 0px;
+            width: 100%;
 			.action {
 				position: absolute;
 				left:20px;
