--- a/src/app/components/main/brokerage/dialog.html
+++ b/src/app/components/main/brokerage/dialog.html
@@ -1,5 +1,14 @@
+<style>
+    .clickmetoclose {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+</style>
 <md-dialog aria-label="List dialog" style="max-width:500px; width: 90%;">
-<div style="position: fixed; right: 10px; top: 10px;" ng-click="justCloseDialog()"><img src="/assets/images/close-message.png" /></div>
+<div style="position: absolute; right: 10px; top: 10px;" class="clickmetoclose" ng-click="justCloseDialog()">
+    <img src="/assets/images/close-message.png" />
+</div>
 <md-dialog-content style="margin: auto; height:400px; width: 100%; background: white;">
 <div class="inviteUsersDialog">
  <span class="heading">Invite</span>
