--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -191,7 +191,7 @@
         padding-bottom: 140px;
     }
     .chart-container {
-        width: 90vw;
+        max-width: 90vw;
         padding-left: 5vw;
     }
     #primaryApp {
