--- a/src/app/components/main/main.responsive.scss
+++ b/src/app/components/main/main.responsive.scss
@@ -74,7 +74,7 @@
 				}
 				.top {
 					flex-grow: 1;
-					background: #9b9b9b;
+					background: white;
 					display: flex;
 					justify-content: center;
 					align-items: center;
@@ -119,7 +119,7 @@
 						flex-flow: row wrap;
 						align-content: flex-start;
 						padding: 10px;
-						margin-top: 90px;
+						margin-top: 10px;
 					}
 				}
 				.bottom {
@@ -187,7 +187,7 @@
 						cursor: pointer;
 					}
 					.verify-btn, .done-btn {
-						height: 35px;
+						height: 40px;
 						padding: 10px 30px;
 						background-color: #3498db;
 						color: white;
